# dear-poor-people

./: .gitignore  AGENTS.md  Dockerfile  README.md  flake.nix  justfile  main.py  poor  poor-install  poor-installer  poorcolumn  poorcurl  poorcurl-openssl  poornmap  poorsocat  poortimeout  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  docker.yml  hadolint.yml
lib/: download.sh  echo.sh  utils.sh
poor_installer_web/: app.py
poor_installer_web/assets/static/: script.js  style.css
poor_installer_web/assets/templates/: index.html
templates/: tool-installer.sh
tests/: test_main.py
tests/tests/: test_main.py
